#pragma once 
class Alien
{
private:
    /* data */
public:
    Alien(/* args */) {}
    ~Alien() {}
};