#pragma once
class Barrera
{
private:
    /* data */
public:
    Barrera(/* args */) {}
    ~Barrera() {}
};