#pragma once
class Bonus
{
private:
    /* data */
public:
    Bonus(/* args */) {}
    ~Bonus() {}
};