#pragma once
class Nave
{
private:
    /* data */
public:
    Nave(/* args */) {}
    ~Nave() {}
};