#pragma once
class Proyectil
{
private:
    /* data */
public:
    Proyectil(/* args */) {}
    ~Proyectil() {}
};