#pragma once
class Blanco
{
private:
    /* data */
public:
    Blanco(/* args */) {}
    ~Blanco() {}
};