#pragma once
class Borde
{
private:
    /* data */
public:
    Borde(/* args */) {}
    ~Borde() {}
};