#pragma once
class Fondo
{
private:
    /* data */
public:
    Fondo(/* args */) {}
    ~Fondo() {}
};