#pragma once
class Highscore
{
private:
    /* data */
public:
    Highscore(/* args */) {}
    ~Highscore() {}
};