#pragma once
class Verde
{
private:
    /* data */
public:
    Verde(/* args */) {}
    ~Verde() {}
};